# Quant-Risk-Engine

./: CONTRIBUTING.md  LICENSE  PAPER.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
ai_adversarial/: __init__.py  attack_simulator.py  defense_analyzer.py  trading_algo_threat.py
config/scenarios/: hedge_fund_baseline.yaml  high_quantum_risk.yaml  well_defended.yaml
core/: __init__.py  reporter.py  scenario.py  simulation_engine.py
data/: README.md
docs/: index.md
financial_risk/: __init__.py  cyber_var.py  monte_carlo.py  portfolio_stress.py  risk_metrics.py
notebooks/: 01_quantum_risk_analysis.ipynb  02_adversarial_ml_analysis.ipynb  03_portfolio_risk_simulation.ipynb  04_bayesian_threat_intelligence.ipynb
quantum_crypto/: __init__.py  harvest_now_decrypt.py  migration_scheduler.py  pqc_vulnerability.py
tests/integration/: test_simulation_engine.py
tests/integration/unit/: test_attack_simulator.py  test_pqc_vulnerability.py  test_risk_metrics.py  test_ttp_engine.py
threat_intel/: __init__.py  bayesian_updater.py  sector_mapper.py  ttp_engine.py
