[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quantum-risk-engine"
version = "0.1.0"
description = "Multi-domain simulation engine for quantum, adversarial AI, threat intel, and financial risk"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Catrina Turner", email = "catrina@imminentflair.com"}
]
keywords = ["quantitative risk", "post-quantum cryptography", "adversarial ML", "threat intelligence", "financial risk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "plotly>=5.17",
    "streamlit>=1.28",
    "adversarial-robustness-toolbox>=1.17",
    "qiskit>=0.45",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
    "jupyter>=1.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
]

[project.scripts]
qre = "core.simulation_engine:cli_entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
